--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 build==1.2.2.post1
 certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.4
+colorlog==6.8.2
 Cython==3.0.12
 filelock==3.18.0
 fsspec==2025.3.0
