--- a/roles/qdrant_server/tasks/main.yml
+++ b/roles/qdrant_server/tasks/main.yml
@@ -19,9 +19,13 @@
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
     state: present
 
-- name: Install Docker
+- name: Install Docker and Docker Compose
   apt:
-    name: [ docker-ce, docker-ce-cli, containerd.io ]
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose
     state: present
     update_cache: yes
 
@@ -29,19 +33,12 @@
   apt:
     name: python3-pip
     state: present
-    update_cache: yes
 
-- name: Ensure setuptools and wheel are installed
-  apt:
-    name:
-      - python3-setuptools
-      - python3-wheel
-    state: present
-
-- name: Install Python Docker SDK (docker-py)
+- name: Install latest Python Docker SDK (docker-py)
   pip:
-    name: docker
-    executable: pip3 
+    name: "docker>=6.1.3"
+    executable: pip3
+    state: latest
 
 - name: Ensure Docker service is running
   service:
@@ -49,42 +46,45 @@
     state: started
     enabled: yes
 
-- name: Pull Qdrant Docker image
-  community.docker.docker_image:
-    name: qdrant/qdrant:{{ qdrant_docker_version }}
-    source: pull
+- name: Create directory for Docker Compose stack
+  file:
+    path: "{{ qdrant_gateway_compose_path }}"
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
 
-- name: Stop existing Qdrant container (if running)
-  community.docker.docker_container:
-    name: qdrant
-    state: stopped
-  ignore_errors: true
+- name: Copy Docker Compose template
+  template:
+    src: docker-compose.yml.j2
+    dest: "{{ qdrant_gateway_compose_path }}/docker-compose.yml"
+    owner: root
+    group: root
+    mode: "0644"
 
-- name: Remove existing Qdrant container (if present)
-  community.docker.docker_container:
-    name: qdrant
-    state: absent
-    force_kill: true
-  ignore_errors: true
+- name: Copy Vatrix Gateway source code for build context
+  copy:
+    src: "{{ playbook_dir }}/roles/qdrant_server/files/vatrix_gateway/"
+    dest: "{{ qdrant_gateway_compose_path }}/vatrix_gateway/"
+    remote_src: no
+  notify: Rebuild Docker Compose stack
 
-- name: Run Qdrant container
-  community.docker.docker_container:
-    name: qdrant
-    image: qdrant/qdrant:{{ qdrant_docker_version }}
-    state: started
-    restart_policy: always
-    published_ports:
-      - "6333:6333"
-    volumes:
-      - /var/lib/qdrant:/qdrant/storage
+- name: Ensure /opt/vatrix_stack/qdrant directory exists
+  file:
+    path: /opt/vatrix_stack/qdrant
+    state: directory
+    mode: '0755'
 
-- name: Wait for Qdrant container to become available
-  uri:
-    url: http://localhost:6333/healthz
-    method: GET
-    status_code: 200
-    timeout: 5
-  register: qdrant_health
-  retries: 5
-  delay: 3
-  until: qdrant_health.status == 200
+- name: Copy custom Dockerfile for Qdrant
+  copy:
+    src: qdrant/Dockerfile.qdrant
+    dest: /opt/vatrix_stack/qdrant/Dockerfile.qdrant
+    mode: '0644'
+
+- name: Start Docker Compose stack (v2 CLI mode)
+  community.docker.docker_compose_v2:
+    project_src: "{{ qdrant_gateway_compose_path }}"
+    state: present
+    build: always
+    remove_orphans: true
+    recreate: always
