Added an optional NGINX reverse proxy as we begin to harden up the package. Deploy, destroy and test have been updated to handle both modes depending on the user's requirement for integrated NGINX.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,4 +1,6 @@
 # Global variables
 qdrant_docker_version: v1.7.3
-qdrant_gateway_compose_path: /opt/vatrix_stack
+deploy_dir: /opt/vatrix_stack
 deploy_qdrant: true
+enable_nginx: false
+vatrix_gateway_host_port: 8000
