Implemented TLS with autogen certs and optional flags. Added to test script for post deploy validation.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -3,4 +3,5 @@ qdrant_docker_version: v1.7.3
 deploy_dir: /opt/vatrix_stack
 deploy_qdrant: true
 enable_nginx: false
+enable_tls: false
 vatrix_gateway_host_port: 8000
